# context-pomdp

./: .gitignore  CMakeLists.txt  README.md  readme.md  run_despot_and_unity.sh  videodev.h
car_hyp_despot/: CMakeLists.txt  package.xml
car_hyp_despot/msg/: ped_belief.msg
car_hyp_despot/src/HypDespot/: CMakeLists.txt
car_hyp_despot/src/gamma/: Agent.cpp  Agent.h  AgentParams.h  GammaParams.h  RVOSimulator.cpp  RVOSimulator.h
car_hyp_despot/src/planner/: CMakeLists.txt  Path.cpp  Path.h  WorldModel.cpp  WorldModel.h  collision.cpp  context_pomdp.cpp  context_pomdp.h  controller.cpp  controller.h  coord.h  crowd_belief.cpp  crowd_belief.h  custom_particle_belief.cpp  custom_particle_belief.h  custom_particle_belief_old.h  debug_util.h  default_prior.cpp  default_prior.h  disabled_util.h  neural_prior.cpp  neural_prior.h  param.cpp  param.cpp.bak  param.h  param.h.bak  path.cpp  path.h  ped_pomdp.cpp  ped_pomdp.h  simulator.cpp  simulator.cu  simulator.h  simulator_base.h  simulator_hyp.h  state.h  utils.h  world_model.cpp  world_model.h
carla_connector/: CMakeLists.txt  package.xml
carla_connector/launch/: connector.launch  joystick_control.launch
carla_connector/msg/: CrowdNetworkAgent.msg  CrowdSidewalkAgent.msg  TrafficAgentArray.msg  agent_array.msg  traffic_agent.msg
carla_connector/src/: automatic_control.py  connector.py  crowd_processor.py  drunc.py  ego_vehicle.py  gamma_connector.py  gamma_controller.py  gamma_crowd_controller.py  gamma_sidewalk_controller.py  gamma_sidewalk_controller_sumo.py  gamma_sidewalk_controller_sumo_gen_area.py  path_extractor.py  path_smoothing.py  plot_jam_factor.py  purepursuit_controller.py  route_map_crowd_controller.py  run_core.py  simple_crowd_controller.py  spawn_osm.py  speed_controller.py  state_processor.py  util.py
carla_connector/srv/: AddEgoAgent.srv  GetExtensionDir.srv
carla_connector2/: CMakeLists.txt  package.xml
carla_connector2/launch/: connector.launch  joystick_control.launch
carla_connector2/msg/: CrowdSidewalkAgent.msg  CrowdSidewalkAgentArray.msg  NetworkRoutePoint.msg  SidewalkRoutePoint.msg  TrafficAgent.msg
carla_connector2/src/: crowd_processor.py  drunc.py  ego_vehicle.py  gamma_crowd_controller.py  joystick_teleop.py  network_agent_path.py  purepursuit_controller.py  sidewalk_agent_path.py  simple_crowd_controller.py  spawn_meshes.py  spectator.py  speed_controller.py  util.py
crowd_pomdp_planner/: CMakeLists.txt  is_despot.launch  package.xml  params.yaml  planner.launch  planner_debug.launch
crowd_pomdp_planner/src/: PedPomdpNode.cpp  PedPomdpNode.h  VelPublisher.cpp  context_pomdp_node.cpp  context_pomdp_node.h  controller.cpp  controller.h  crowd_pomdp_node.cpp  crowd_pomdp_node.h  local_frame.cpp  ped_pomdp_node.cpp  ped_pomdp_node.h  pomdp_simulator.cpp  simulator.cpp  vel_publisher.cpp  world_simulator.cpp  world_simulator.h
ped_costmap/: CMakeLists.txt  package.xml
ped_costmap/cfg/: Costmap2D.cfg
ped_costmap/docs/: Costmap2DConfig-usage.dox  Costmap2DConfig.wikidoc
ped_costmap/include/costmap_2d/: cell_data.h  costmap_2d.h  costmap_2d_ros.h  voxel_costmap_2d.h
ped_costmap/src/: costmap_2d.cpp  costmap_2d_cloud.cpp  costmap_2d_markers.cpp  costmap_2d_ros.cpp  observation_buffer.cpp  voxel_costmap_2d.cpp
ped_is_despot/: .gitignore  CMakeLists.txt  ISER-Visualization.vcg  ISER_visualizer.launch  README  break.sh  is_despot.launch  is_despot_param.yaml  mainpage.dox  makeplan.sh  momdp.launch  momdp_safety_zone.launch  package.xml  params.yaml  params_initial_belief.yaml  params_initial_belief2.yaml  params_initial_belief_indoor.yaml  params_passage.yaml  pathplan.launch  pedinit.txt  real_path_at_create  real_path_before_create  real_path_past_create  simulation.launch  simulation_full.vcg  simulation_momdp_3ped.launch  simulation_momdp_single.launch  simulation_odomOnly.vcg  speed_advisor.yaml  speed_controller.launch  stm32_speed_controller.launch
ped_is_despot/msg/: cluster.msg  clusters.msg  imitation_data.msg  ped_info.msg  ped_local_frame.msg  ped_local_frame_vector.msg  pedestrian.msg  pedestrian_array.msg  peds_car_hist.msg  peds_car_info.msg  peds_info.msg
ped_is_despot/src/: DataRecorder.cpp  PathPlanner.cpp  PedPomdpNode.cpp  PedPomdpNode.h  ROS_SimulationEngine.cpp  ROS_SimulationEngine.h  VelPublisher.cpp  args.h  controller.cpp  controller.h  local_frame.cpp  pomdp_simulator.cpp  pomdp_simulator.h  simulator.cpp  simulator_base.h  world_simulator.cpp  world_simulator.h
ped_is_despot/src/RVO2/: RVO.sln
ped_is_despot/src/despot_backup/: README.md
ped_is_despot/src/despot_multiple/: .gitignore  Makefile  README.md  README.txt  blank_map  blank_path  err  out  output.txt  path 0.txt  tags  test.cpp  update.sh  update_main.sh
ped_is_despot/src/planner/: Path.cpp  WorldModel.cpp  WorldModel.h  collision.cpp  coord.h  custom_particle_belief.cpp  custom_particle_belief.h  (+6 more)
ped_path_predictor/RVO2/: CMakeLists.txt  package.xml
ped_pathplan/: CMakeLists.txt  package.xml
ped_pathplan/launch/: image_tutorial-3.py  img.py  line.py  load_map.launch  market.pgm  market.yaml  office_map2.yaml  office_map3.pgm  office_map3.yaml  params.yaml  pathplan.launch  utown_momdp_small_fill.yaml
ped_pathplan/src/: PathPlanner.cpp  SendStartGoal.cpp  pathplan.cpp  pathplan_ros.cpp  readme_yuanfu
perception/cluster_assoc/: .gitignore  CMakeLists.txt  package.xml
perception/cluster_extraction/: .gitignore  CMakeLists.txt  package.xml  ped_clustering.launch
pnc_msgs/: .gitignore  CMakeLists.txt  package.xml
pnc_msgs/msg/: local_map.msg  move_status.msg  poi.msg  sig_pt.msg  speed_contribute.msg
summit_connector/: CMakeLists.txt  package.xml
summit_connector/launch/: connector.launch  joystick_control.launch  map.yaml
summit_connector/src/: crowd_processor.py  drunc.py  ego_vehicle.py  gamma_crowd_controller.py  network_agent_path.py  path_smoothing.py  plot_avg_speed.py  purepursuit_controller.py  sidewalk_agent_path.py  simple_crowd_controller.py  spawn_meshes.py  spectator.py  speed_controller.py  summit.py  summit_dql.py  util.py  visualize_live.py
(+501 files in other folders)
