<?xml version="1.0"?>
<package>
  <name>crowd_pomdp_planner</name>
  <version>0.0.0</version>
  <description>The crowd_pomdp_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="yuanfu@todo.todo">yuanfu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

 <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>pnc_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_depend>car_hyp_despot</build_depend>
  <build_depend>msg_builder</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>pnc_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <run_depend>car_hyp_despot</run_depend>
  <run_depend>msg_builder</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
